--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="#video">Video Project</a>
           </th>
           <th>
-            <a href="twine">Twine</a>
+            <a href="#twine">Twine</a>
           </th>
           <th>
             <a href="#imaginary">Imaginary App</a>
