--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         the concept. In it, I wanted to explore themes of reality, friendship, and above all the
         idea that nothing HAS to be set in stone. You choose your own destiny even if it seems as if
         the odds are all stacked against you. You can find a link to the song that inspired the
-        project <a href="https://youtu.be/A7KNYk4f3XQ?si=RLeKkp-IZcPxoLBp">here</a>. You can also find a link to my Twine game <a href="http://davemalloy.com/"
+        project <a href="https://youtu.be/A7KNYk4f3XQ?si=RLeKkp-IZcPxoLBp">here</a>. You can also find a link to my Twine game <a href="Fosse_Twine (2).html"
           >here</a>.</p>
       <p>My friendly tip: even if it says you got the bad end and you have to start over, try try
         try again! Maybe things will work out the next time...</p>
