--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <p>This is a placeholder for my video project!</p>
       <div class="textblock">
         <h2 id="twine">Twine: Heat-Haze Game</h2>
-        <img src="img/haze.png" alt="a screenshot of my twine project" class="center-img"
+        <img src="img/timeloop.jpg" alt="a screenshot of my twine project" class="center-img"
           style="max-width:100%; max-height:100%;">
       </div>
       <!--Time to write. Flesh it out! Define family, qualify it, explicate it telling us why these people are important, and how they contributed to how you got here and where you are going. What about "home." What  does that mean to you? In what ways is it significant in determining where your are going? Replace the content between <p> and </p> that says "Lorem ipsum."-->
