--- a/index.html
+++ b/index.html
@@ -100,19 +100,23 @@
         the concept. In it, I wanted to explore themes of reality, friendship, and above all the
         idea that nothing HAS to be set in stone. You choose your own destiny even if it seems as if
         the odds are all stacked against you. You can find a link to the song that inspired the
-        project <a href="https://youtu.be/A7KNYk4f3XQ?si=RLeKkp-IZcPxoLBp">here</a>. You can also find a link to my Twine game <a href="Fosse_Twine (2).html"
-          >here</a>.</p>
+        project <a href="https://youtu.be/A7KNYk4f3XQ?si=RLeKkp-IZcPxoLBp">here</a>. You can also
+        find a link to my Twine game <a href="Fosse_Twine.html">here</a>.</p>
       <p>My friendly tip: even if it says you got the bad end and you have to start over, try try
         try again! Maybe things will work out the next time...</p>
     </div>
     <div class="textblock">
       <h2 id="imaginary">Imaginary App</h2>
-      <img src="callie.jpg" alt="a pretty sunset" class="center-img"
+      <img src="img/badreads.png" alt="a text box" class="center-img"
         style="max-width:100%; max-height:100%;">
-      <p>This is a placeholder for my Imaginary App project!</p>
+      <p>In identifying problematic aspects of classic works of literature, BADREADS creates
+        friction by creating tension between wanting to read great works of literature while also
+        being forced to acknowledge that they perpetuate harmful ideologies. The app works like your
+        run-of-the-mill book app with a focus on the classics, but when you attempt to add a book to
+        your reading list, you have to directly accept that you want to read a book that has these
+        topics. The friction is meant to be one of reckoning in the modern age of morality.</p>
       <p>
-        <a href="RESUME_Ella-Fosse_9-16_REVISED.pdf">This is a link to a pdf! Hope you enjoy my
-          resume!</a>
+        <a href="badreads.pdf">You can find my one-sheet here.</a>
       </p>
     </div>
     <!--Time to write. Flesh it out! Define family, qualify it, explicate it telling us why these people are important, and how they contributed to how you got here and where you are going. What about "home." What  does that mean to you? In what ways is it significant in determining where your are going? Replace the content between <p> and </p> that says "Lorem ipsum."-->
