--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@
         being forced to acknowledge that they perpetuate harmful ideologies. The app works like your
         run-of-the-mill book app with a focus on the classics, but when you attempt to add a book to
         your reading list, you have to directly accept that you want to read a book that has these
-        topics. The friction is meant to be one of reckoning in the modern age of morality.</p>
+        topics. The friction is meant to be one of reckoning in the modern age of morality. Please
+        understand that this is not meant to "cancel" any work of literature or author. It is simply
+        meant to encourage people to think about what they are reading critically.</p>
       <p>
         <a href="badreads.pdf">You can find my one-sheet here.</a>
       </p>
