--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <!--find a YouTube video that has some significance in your life. Click "share," and copy and paste the embed link and paste it below-->
       <div class="video-container">
         <iframe width="560" height="315"
-          src="https://www.youtube.com/embed/iI8wA9p8hJA?si=TIbhmBgTe-Rf59bC"
+          src="https://youtu.be/Et4mcmu79UI"
           title="YouTube video player" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen></iframe>
