--- a/index.html
+++ b/index.html
@@ -80,13 +80,15 @@
       <h2 id="video">Video Project</h2>
       <!--find a YouTube video that has some significance in your life. Click "share," and copy and paste the embed link and paste it below-->
       <div class="video-container">
-        <iframe width="560" height="315"
-          src="https://youtu.be/Et4mcmu79UI"
+        <iframe width="560" height="315" src="https://youtu.be/Et4mcmu79UI"
           title="YouTube video player" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen></iframe>
       </div>
-      <p>This is a placeholder for my video project!</p>
+      <p>My video project brings together a new location with old traditions. Set in the backdrop of
+        my first trip to Seattle ever, I combined videos of things that were familiar and things
+        that were strikingly unfamiliar to me to create a video that encapsulated my feelings on
+        going "home" to a place that I didn't know.</p>
       <div class="textblock">
         <h2 id="twine">Twine: Heat-Haze Game</h2>
         <img src="img/timeloop.jpg" alt="a screenshot of my twine project" class="center-img"
