--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
       <h2 id="video">Video Project</h2>
       <!--find a YouTube video that has some significance in your life. Click "share," and copy and paste the embed link and paste it below-->
       <div class="video-container">
-        <iframe width="560" height="315" src="https://youtu.be/Et4mcmu79UI"
+        <iframe width="560" height="315"
+          src="https://www.youtube.com/embed/Et4mcmu79UI?si=ur_lgAZfHP6RJzIo"
           title="YouTube video player" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen></iframe>
